# Capability-Causal-Data

./: .gitignore  FINAL_ARTIFACT_INDEX.md  FINAL_RESULTS_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
causal_reliability/: __init__.py
configs/: ablation.yaml  baseline_comparison.yaml  certificate_ablation.yaml  clip_overlay_repair.yaml  clip_overlay_validation.yaml  coco_text_cic_full.yaml  coco_text_cic_localization_diagnostic.yaml  coco_text_cic_metadata.yaml  coco_text_cic_triage.yaml  colored_digits.yaml  confident_wrong.yaml  counterfactual_mismatch.yaml  cross_shortcut_generalization.yaml  csa_lora_waterbirds.yaml  discovered_cic.yaml  discovery_failure_cases.yaml  embedding_additivity_validation.yaml  example_cic_audit.yaml  final_negative_controls.yaml  final_validation.yaml  hard_multidecoy_clip_repair.yaml  hard_multidecoy_failure_conditioned_repair.yaml  hard_multidecoy_scale_model_audit.yaml  holdout_tuning.yaml  label_preservation_packet.yaml  lambda_sweep.yaml  multidecoy_clip_repair.yaml  natural_text_error_analysis.yaml  natural_text_intervention_sweep.yaml  natural_text_open_proposal_cic.yaml  negative_controls.yaml  nonoracle_clip_repair.yaml  partial_flip_sweep.yaml  partial_flip_synthetic.yaml  partial_flip_text.yaml  partial_flip_vision.yaml  per_input_class_balance_validation.yaml  predictive_cic_gate.yaml  quickstart.yaml  random_aug_failure_benchmark.yaml  (+19 more)
demo/: README.md  app.py  cic_pipeline.py  demo_config.yaml
docs/: auto_proposal_pilot.md  cic_audit_demo.md  csa_lora_waterbirds.md  final_protocol.md  formal_separation.md  (+8 more)
(+510 files in other folders)
