[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-reliability"
version = "0.1.0"
description = "Prediction-level causal reliability certificates for shortcut-shift failure risk."
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.7", "numpy>=1.24", "pandas>=2.0", "PyYAML>=6.0", "torch>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
